# cyfaust

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml  taskfile.yml
.github/workflows/: cyfaust-cibuildwheel.yml  cyfaust-debug.yml  cyfaust-info.yml  cyfaust-llvm-release.yml  cyfaust-release.yml  cyfaust-test-all.yml  cyfaust-test-case.yml  cyfaust-test.yml  cyfaust-test2.yml  cyfaust-wheel-all.yml  cyfaust-wheel.yml  cyfaust-windows-release.yml  pyjs_builder.yml  python-application.yml  python-publish.yml
api/: index.html
api/box/: index.html
api/common/: index.html
api/interp/: index.html
api/player/: index.html
api/signal/: index.html
assets/: graph.d2
building/: index.html
cli/: index.html
dev/cleaning-up/: index.html
dev/cyfaust_block_api/: index.html
dev/links/: index.html
dev/soundfile/: index.html
docs/: FAUST_INTERP_SOUNDFILE_BUG.md  FAUST_LLVM_BACKEND.md  FIXES_APPLIED.md  README.md  box-signal.md  build-faust.md  building.md  cleaning-up.md  cli.md  cyfaust.html  cyfaust_block_api.md  debug_mode_anaysis.md  examples.md  getting-started.md  links.md  x86_error.txt  x86_errors.md
docs/api/: box.md  common.md  index.md  interp.md  player.md  signal.md
docs/api/dynamic/: cyfaust.box.html  cyfaust.common.html  cyfaust.interp.html  cyfaust.signal.html
docs/api/static/: cyfaust.cyfaust.html
docs/assets/: architecture.d2
docs/default/: cyfaust.common.html  cyfaust.html  cyfaust.interp.html  cyfaust.signal.html
docs/dev/: cleaning-up.md  cyfaust_block_api.md  links.md  soundfile.md
docs/devnotes/: cleaning-up.md  cyfaust_block_api.md  debug_mode_anaysis.md  faust-gui.md  soundfile.md  universal2.md  x86_errors.md
docs/devnotes/ci/: README.md  pyproject.toml
docs/devnotes/windows/: README.md  winplus.yml
docs/licenses/: libsndfile-lgpl-2.1.txt
docs/mkdocs/: cli.md  index.md
docs/mkdocs/api/: box.md  common.md  index.md  interp.md  signal.md
docs/static/: cyfaust.cyfaust.html  cyfaust.html  styles.css
examples/: index.html
getting-started/: index.html
include/faust/audio/: rtaudio-dsp.h
include/faust/dsp/: sound-player.h
licenses/: faust-gpl-2.71.0.txt
resources/architecture/api/: README.md
resources/architecture/api/doc/: Generic.md
resources/architecture/daisy/: README.md
resources/architecture/juce/: README.md
resources/architecture/max-msp/: README.md
resources/architecture/max-msp/py2max/: README.md
resources/architecture/teensy/: README.md
resources/architecture/vcvrack/: README.md
resources/libraries/examples/: README.md
resources/libraries/examples/old/: README.md
scripts/: Dockerfile  README.md  build_windows.py  faust.mk  faust_config.py  faust_config2.py  gen_htmldoc.py  generate_static.py  get_debug_python.py  get_debug_python.sh  inspect_cyfaust.py  install_deps.py  interp_plus_backend.cmake  manage.py  mkvenv.py  mkvenv.sh  release.py  rename_wheel.py  setup.sh  setup_cyfaust.py  setup_faust.py  setup_sndfile.sh  taskfile.yml  test_cpp_tests.sh  test_wheel.sh  verify_build_sync.sh  wheel_mgr.py
scripts/archive/: build_wheel.py  setup_libfaust_llvm.sh  taskfile.yml
scripts/archive/static/: gen.py
scripts/docker/: Dockerfile  Dockerfile.manylinux  README.md
scripts/patch/: faust.mk  interp_plus_backend.cmake  interp_plus_target.cmake  rtaudio-dsp.h  rtaudio-dsp.malloc.h
scripts/static/: add_cyfaust_module.cmake  gen.py  parse.py
search/: search_index.json
src/cyfaust/: CMakeLists.txt  README.md  __init__.py  __main__.py  box.h  box.pxd  box.pyi  box.pyx  common.pyi  common.pyx  faust_box.pxd  faust_box_oo.pyx  faust_gui.pxd  faust_interp.pxd  faust_play.pxd  faust_player.pxd  faust_signal.pxd  gui.pxd  gui.pyx  gui_statics.cpp  interp.h  interp.pyi  interp.pyx  play.cpp  play.pyx  player.cpp  player.pyi  player.pyx  signal.h  signal.pxd  signal.pyi  signal.pyx
src/static/cyfaust/: CMakeLists.txt  README.md  __init__.py  backend_config.pxi  backend_llvm.pxi  common.pxd  cyfaust.pyx  faust_box.pxd  faust_gui.pxd  faust_interp.pxd  faust_llvm.pxd  faust_play.pxd  signal.pxd
src/static/cyfaust/scripts/: gen0.py
tests/: demo.dsp  osc.dsp  rtaudio-dsp-fixed-instrumented.h  test_box_coverage.py  test_cli.py  test_cyfaust_api_coverage.py  test_cyfaust_box.py  test_cyfaust_box_skip.py  test_cyfaust_cinterface.py  test_cyfaust_common.py  test_cyfaust_gui.py  test_cyfaust_interp.py  test_cyfaust_memory.py  test_cyfaust_play.py  test_cyfaust_player.py  test_cyfaust_signal.py  test_cyfaust_signal_skip.py  test_cyfaust_soundfile.py  test_cyfaust_soundfile2.py  test_new_methods.py  test_signal_coverage.py  testutils.py
tests/abstract/a1/: Makefile  demo.h  demo.pyx  main.cpp  setup.py
tests/abstract/a2/: Makefile  demo.h  demo.pyx  test_demo.py
tests/abstract/a3/: .gitignore  Makefile  README.md  demo.h  demo.pyx  main
tests/dsp/: soundfile.dsp
tests/func_overloading/: README.md
tests/test_faust_interp/: interp-audio-min.cpp  interp-audio-test.cpp
