[project]
name = "cyfaust"
version = "0.1.0"
description = "A Cython wrapper of the Faust interpreter and signal processing library with RtAudio support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
maintainers = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = [
    "faust",
    "dsp",
    "audio",
    "signal-processing",
    "music",
    "sound",
    "synthesis",
    "cython",
    "rtaudio",
    "real-time"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.scripts]
cyfaust = "cyfaust.__main__:main"

[project.urls]
Homepage = "https://github.com/shakfu/cyfaust"
Repository = "https://github.com/shakfu/cyfaust"
Documentation = "https://github.com/shakfu/cyfaust#readme"
Issues = "https://github.com/shakfu/cyfaust/issues"
Changelog = "https://github.com/shakfu/cyfaust/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "numpy",
    "twine>=6.2.0",
    "delvewheel>=1.11.2; os_name == 'nt'",
    "delocate>=0.13.0; os_name == 'darwin'",
    "auditwheel>=6.6.0; os_name == 'linux'",
]

[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/cyfaust"]
wheel.exclude = ["build", "dist", ".venv", "*.egg-info"]
cmake.build-type = "Release"
sdist.exclude = ["build", "dist", ".venv", "*.egg-info"]

[tool.scikit-build.cmake.define]
# These can be overridden via CMAKE_ARGS environment variable
# e.g., CMAKE_ARGS="-DSTATIC=OFF" uv sync  (for development)
# Default to STATIC=ON for PyPI distribution (sdist/wheel builds)
STATIC = "ON"
INCLUDE_SNDFILE = "ON"
# Linux audio backends
ALSA = "ON"
PULSE = "OFF"
JACK = "OFF"
# Windows audio backends
ASIO = "OFF"
WASAPI = "ON"
DSOUND = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/static"]
